# cryptosmelt

./: .env  .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  config.toml
migrations/2018-01-28-033913_initial_tables/: down.sql  up.sql
migrations/2018-02-06-022550_add_indexes/: down.sql  up.sql
scripts/: psql_init.sql  ubuntu-aeon.sh  ubuntu-cryptosmelt.sh
src/: api.rs  app.rs  blocktemplate.rs  config.rs  cryptonightlite.rs  cryptonote_utils.rs  daemon_client.rs  data.rs  db.rs  main.rs  miner.rs  models.rs  schema.rs  server.rs  stratum.rs  unlocker.rs
src/crypto/: cryptonightlite.rs  cryptonote_utils.rs  longkeccak.rs  mod.rs
src/db/: mod.rs  models.rs
