[package]
name = "cryptosmelt"
version = "0.1.0"
authors = ["jmdx"]

[dependencies]
toml = "0.4"
serde_derive = "1.0"
serde = "1.0"
jsonrpc-core = "8.0"
jsonrpc-tcp-server = "8.0"

[dependencies.uuid]
version = "0.4"
features = ["v4"]

[dependencies.concurrent-hashmap]
version = "0.2.1"
default-features = false
