[package]
name = "cryptosmelt"
version = "0.1.0"
authors = ["jmdx"]

[dependencies]
log = "0.4"
fern = "0.5"
chrono = "0.4"
toml = "0.4"
serde_derive = "1.0"
serde_json = "1.0"
serde = "1.0"
jsonrpc-core = "8.0"
jsonrpc-tcp-server = "8.0"
iron = "0.5"
reqwest = "0.8"
schedule_recv = "0.1.0"
bytes = "0.4"
num-bigint = "0.1"
num-integer = "0.1"
regex = "0.2"
lru_time_cache = "0.8"

# Dependencies for our lite variant on Mithril's cryptonight implementation
groestl = "0.3.0"
blake = "2.0.0"
jh-ffi = "0.0.2"
skein-ffi = "0.0.1"

influx_db_client = "^0.3.1"

[dependencies.mithril]
git = 'https://github.com/Ragnaroek/mithril'
rev = 'b45fd61b94d105411f21e3ab144a5707ba444331'

[dependencies.uuid]
version = "0.4"
features = ["v4"]

[dependencies.concurrent-hashmap]
version = "0.2.1"
default-features = false
